--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="icon" type="image/png" href="https://u.cubeupload.com/ItsNyan777/download2.png">
 </head>
 <body>
+<script>
+    if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+        window.location.href = 'mobile-error.html';
+    }
+</script>
     <div class="navbar">
         <a href="index.html">Inicio</a>
         <a href="search.html">Buscar</a>
