--- a/mobile-error.html
+++ b/mobile-error.html
@@ -8,7 +8,7 @@
 <body>
     <div class="error-message">
         <h1>Acceso desde dispositivos móviles no permitido</h1>
-        <p>Por favor, visita este sitio desde un dispositivo de escritorio.</p>
+        <p>Por favor, visita este sitio desde un dispositivo de escritorio. <br>Me quedó bonita la página de error :D</p>
     </div>
 </body>
 </html>
