--- a/search.html
+++ b/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <link rel="stylesheet" href="styles1.css">
+  <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscar</title>
@@ -14,6 +14,12 @@
     </style>
 </head>
 <body>
+   <div class="navbar">
+        <a href="index.html">Inicio</a>
+        <a href="search.html">Buscar</a>
+        <a href="suggestions.html">Sugerencias</a>
+        <a href="contact.html">Contacto</a>
+    </div>
     <input type="text" id="searchInput" placeholder="Buscar...">
     <button onclick="searchText()">Buscar</button>
   <p>Esto es inútil, que vas a buscar xd?</p>
