--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="navbar">
         <a href="index.html">Inicio</a>
         <a href="search.html">Buscar</a>
-        <a href="suggestions.html">Sugerencias</a>
-        <a href="contact.html">Contacto</a>
+        <a href="error404.html">Sugerencias</a>
+        <a href="error404.html">Contacto</a>
     </div>
 <p class="text"><strong>INTL</strong><br>Inteligencia artificial internacional
 </p>
