--- a/search.html
+++ b/search.html
@@ -17,8 +17,8 @@
    <div class="navbar">
         <a href="index.html">Inicio</a>
         <a href="search.html">Buscar</a>
-        <a href="suggestions.html">Sugerencias</a>
-        <a href="contact.html">Contacto</a>
+        <a href="error404.html">Sugerencias</a>
+        <a href="error404.html">Contacto</a>
     </div>
     <input type="text" id="searchInput" placeholder="Buscar...">
     <button onclick="searchText()">Buscar</button>
