--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="error404.html">Sugerencias</a>
         <a href="error404.html">Contacto</a>
     </div>
-<p class="text"><strong>INTL</strong><br>Inteligencia artificial internacional
+<p class="text"><strong>INTL</strong><br>CUADRO DE PRUEBA
 </p>
 </body>
 </html>
