--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego de Reacción</title>
+    <title>Juego de Reacción con Audio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,6 +22,10 @@
             <p>La tecla <span>P</span></p>
         </div>
     </div>
-<script src="script.js"></script>
+
+    <!-- Audio -->
+    <audio id="audio" src="https://s51.aconvert.com/convert/p3r68-cdx67/zn2lt-ladi1.mp3"></audio>
+
+    <script src="script.js"></script>
 </body>
 </html>
