--- a/JDR.html
+++ b/JDR.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juego de Reacción con Audio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="JDR.css">
+    <link rel="icon" href="https://u.cubeupload.com/ItsNyan777/disfraz2.png">
 </head>
 <body>
     <div class="container">
@@ -26,6 +27,6 @@
     <!-- Audio -->
     <audio id="audio" src="https://s51.aconvert.com/convert/p3r68-cdx67/zn2lt-ladi1.mp3"></audio>
 
-    <script src="script.js"></script>
+    <script src="JDR.js"></script>
 </body>
 </html>
