--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <!-- Audio -->
-    <audio id="audio" src="https://s51.aconvert.com/convert/p3r68-cdx67/zn2lt-ladi1.mp3"></audio>
+    <audio id="audio" src="https://static.wikia.nocookie.net/deathpenaltyroblox/images/0/0c/Audio1.mp3/revision/latest?cb=20241127202436&format=original&path-prefix=es"></audio>
 
     <script src="JDR.js"></script>
 </body>
