--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <!-- Audio -->
-    <audio id="audio" src="Audio1.mp3.mpeg"></audio>
+    <audio id="audio" src="Audio1.mp3"></audio>
 
     <script src="JDR.js"></script>
 </body>
