--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
     <!-- Audio -->
     <audio id="audio" src="Audio1.mp3"></audio>
+    <audio id="audioInicio" src="Audio1.mp3"></audio>
+    <audio id="audioGanaJugador1" src="Pull.mp3"></audio>
+    <audio id="audioGanaJugador2" src="Pull.mp3"></audio>
+    <audio id="audioPull" src="Pull.mp3"></audio>
 
     <script src="JDR.js"></script>
 </body>
