--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pibik - Minijuegos</title>
     <link rel="icon" href="https://u.cubeupload.com/ItsNyan777/disfraz2.png" type="image/png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Home.css">
 </head>
 <body>
     <!-- Header -->
@@ -52,6 +52,6 @@
     <!-- Fondo animado -->
     <div id="burbujas"></div>
 
-    <script src="script.js"></script>
+    <script src="Home.js"></script>
 </body>
 </html>
