--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <h2>Juegos Destacados</h2>
         <div class="galeria">
             <div class="juego">
-                <img src="assets/juego1.jpg" alt="Juego 1">
+                <img src="assets/juego1.jpg" alt="Juego de Reacción">
                 <h3>Juego de Reacción</h3>
-                <button class="jugarBtn">Jugar</button>
+                <a href="JDR.html" class="jugarBtn">Jugar</a>
             </div>
             <div class="juego">
                 <img src="assets/juego2.jpg" alt="Juego 2">
