--- a/JDR.html
+++ b/JDR.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego de Reacción con Audio</title>
+    <title>Juego de Reacción</title>
     <link rel="stylesheet" href="JDR.css">
     <link rel="icon" href="https://u.cubeupload.com/ItsNyan777/disfraz2.png">
 </head>
