--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>Juegos Destacados</h2>
         <div class="galeria">
             <div class="juego">
-                <img src="assets/juego1.jpg" alt="Juego de Reacción">
+                <img src="https://u.cubeupload.com/ItsNyan777/D12.png" alt="Juego de Reacción">
                 <h3>Juego de Reacción</h3>
                 <a href="JDR.html" class="jugarBtn">Jugar</a>
             </div>
