--- a/JDR.html
+++ b/JDR.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juego de Reacción</title>
     <link rel="stylesheet" href="JDR.css">
-    <link rel="icon" href="https://u.cubeupload.com/ItsNyan777/disfraz2.png">
+    <link rel="icon" href="https://u.cubeupload.com/ItsNyan777/Webpnetresizeimage.png">
 </head>
 <body>
     <div class="container">
