--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                 <a href="JDR.html" class="jugarBtn">Jugar</a>
             </div>
             <div class="juego">
-                <img src="assets/juego2.jpg" alt="Juego 2">
+                <img src="assets/juego2.jpg" alt="Juego de Memoria">
                 <h3>Juego de Memoria</h3>
-                <button class="jugarBtn">Jugar</button>
+                <a href="#" class="jugarBtn">Jugar</a>
             </div>
             <div class="juego">
-                <img src="assets/juego3.jpg" alt="Juego 3">
+                <img src="assets/juego3.jpg" alt="Juego de Puzzle">
                 <h3>Juego de Puzzle</h3>
-                <button class="jugarBtn">Jugar</button>
+                <a href="#" class="jugarBtn">Jugar</a>
             </div>
         </div>
     </section>
