--- a/JDR.html
+++ b/JDR.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego de Reacción</title>
+    <title>Juego de Reacción - Pibik</title>
     <link rel="stylesheet" href="JDR.css">
     <link rel="icon" href="https://u.cubeupload.com/ItsNyan777/Webpnetresizeimage.png">
 </head>
 <body>
+    <!-- Header -->
+    <header id="header">
+        <h1 id="logo">Pibik</h1>
+        <nav>
+            <button id="explorarBtn">Explorar</button>
+            <button id="reportarBtn">Reportar Bugs</button>
+            <button id="inicioBtn">Inicio</button>
+        </nav>
+    </header>
+
+    <!-- Contenedor del juego -->
     <div class="container">
         <div class="player" id="player1">
             <h2>Jugador 1</h2>
