--- a/JDR.html
+++ b/JDR.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego de Reacción - Pibik</title>
-    <link rel="stylesheet" href="JDR.css">
-    <link rel="icon" href="https://u.cubeupload.com/ItsNyan777/Webpnetresizeimage.png">
+    <title>Pibik - Minijuegos</title>
+    <link rel="icon" href="https://u.cubeupload.com/ItsNyan777/disfraz2.png" type="image/png">
+    <link rel="stylesheet" href="Home.css"> <!-- O JDR.css para el juego de reacción -->
 </head>
 <body>
     <!-- Header -->
     <header id="header">
-        <h1 id="logo">Pibik</h1>
+        <div class="logo-container">
+            <img src="https://u.cubeupload.com/ItsNyan777/disfraz2.png" alt="Logo Pibik" class="logo">
+            <h1 id="logo">Pibik</h1>
+        </div>
         <nav>
             <button id="explorarBtn">Explorar</button>
             <button id="reportarBtn">Reportar Bugs</button>
