--- a/JDR.html
+++ b/JDR.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pibik - Minijuegos</title>
     <link rel="icon" href="https://u.cubeupload.com/ItsNyan777/disfraz2.png" type="image/png">
-    <link rel="stylesheet" href="Home.css"> <!-- O JDR.css para el juego de reacción -->
+    <link rel="stylesheet" href="JDR.css"> <!-- O JDR.css para el juego de reacción -->
 </head>
 <body>
     <!-- Header -->
