--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <!-- Header -->
-    <header id="header">
-        <div class="logo-container">
-            <img src="https://u.cubeupload.com/ItsNyan777/disfraz2.png" alt="Logo Pibik" class="logo">
-            <h1 id="logo">Pibik</h1>
-        </div>
-        <nav>
-            <button id="explorarBtn">Explorar</button>
-            <button id="reportarBtn">Reportar Bugs</button>
-            <button id="inicioBtn">Inicio</button>
-        </nav>
-    </header>
+<header id="header">
+    <div class="logo-container">
+        <img src="https://u.cubeupload.com/ItsNyan777/disfraz2.png" alt="Logo Pibik" class="logo">
+        <a href="index.html" id="logo">Pibik</a> <!-- Enlace a index.html -->
+    </div>
+    <nav>
+        <a href="explorar.html" class="nav-btn">Explorar</a> <!-- Enlace a explorar.html -->
+        <a href="reportar.html" class="nav-btn">Reportar Bugs</a> <!-- Enlace a reportar.html -->
+        <a href="index.html" class="nav-btn">Inicio</a> <!-- Enlace a index.html -->
+    </nav>
+</header>
 
     <!-- Sección de propósito -->
     <section id="proposito">
@@ -35,7 +35,7 @@
         <h2>Juegos Destacados</h2>
         <div class="galeria">
             <div class="juego">
-                <img src="https://u.cubeupload.com/ItsNyan777/D12.png" alt="Juego de Reacción">
+                <img src="https://u.cubeupload.com/ItsNyan777/disfraz1.png" alt="Juego de Reacción">
                 <h3>Juego de Reacción</h3>
                 <a href="JDR.html" class="jugarBtn">Jugar</a>
             </div>
