--- a/JDR.html
+++ b/JDR.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="JDR.css"> <!-- O JDR.css para el juego de reacción -->
 </head>
 <body>
-    <!-- Header -->
-    <header id="header">
-        <div class="logo-container">
-            <img src="https://u.cubeupload.com/ItsNyan777/disfraz2.png" alt="Logo Pibik" class="logo">
-            <h1 id="logo">Pibik</h1>
-        </div>
-        <nav>
-            <button id="explorarBtn">Explorar</button>
-            <button id="reportarBtn">Reportar Bugs</button>
-            <button id="inicioBtn">Inicio</button>
-        </nav>
-    </header>
+   <!-- Header -->
+<header id="header">
+    <div class="logo-container">
+        <img src="https://u.cubeupload.com/ItsNyan777/disfraz2.png" alt="Logo Pibik" class="logo">
+        <a href="index.html" id="logo">Pibik</a> <!-- Enlace a index.html -->
+    </div>
+    <nav>
+        <a href="explorar.html" class="nav-btn">Explorar</a> <!-- Enlace a explorar.html -->
+        <a href="reportar.html" class="nav-btn">Reportar Bugs</a> <!-- Enlace a reportar.html -->
+        <a href="index.html" class="nav-btn">Inicio</a> <!-- Enlace a index.html -->
+    </nav>
+</header>
 
     <!-- Contenedor del juego -->
     <div class="container">
