--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>Juegos Destacados</h2>
         <div class="galeria">
             <div class="juego">
-                <img src="https://u.cubeupload.com/ItsNyan777/disfraz1.png" alt="Juego de Reacción">
+                <img src="https://u.cubeupload.com/ItsNyan777/Webpnetresizeimage1.png" alt="Juego de Reacción">
                 <h3>Juego de Reacción</h3>
                 <a href="JDR.html" class="jugarBtn">Jugar</a>
             </div>
